@@ -23,6 +23,7 @@
 	   macro defaults for *, 0, and # if no args specified.
 	   getopt on non-linux requires optind to be saved/restored.
 	- fix: don't remove file until last occurence in transaction (#4291).
+	- resuscitate net shared paths (#4330).
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
